--- a/ci/variables-dev.yaml
+++ b/ci/variables-dev.yaml
@@ -1,6 +1,7 @@
 # Currently the docker registry can only be a GCR registry
 # which is accessible using the concourse service account.
 # The gcp_project_id should be the project id where the container registry is hosted.
-docker_registry: eu.gcr.io/<gcp_project_id}>
-infrastructure_version: "v1.0.0"
+docker_registry: eu.gcr.io/census-eq-ci
+
+# Do not prefix with '#'
 slack_channel_name: ''
